--- a/travis.yml
+++ b/travis.yml
@@ -39,6 +39,6 @@ before_script:
 # script always run to completion (set +e). All of these code checks are must haves
 # in a modern Go project.
 script:
-  - test -z $(gofmt -s -l $GO_FILES)  # Fail if a .go file hasn't been formatted with gofmt
-  - go test -v -race $PKGS            # Run all the tests with the race detector enabled
-  - go vet $PKGS                      # go vet is the official Go static analyzer
+  #- test -z $(gofmt -s -l $GO_FILES)  # Fail if a .go file hasn't been formatted with gofmt
+  #- go test -v -race $PKGS            # Run all the tests with the race detector enabled
+  #- go vet $PKGS                      # go vet is the official Go static analyzer
